--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ h4{
 	font-size: 16px;
 	line-height: 15px;
 	letter-spacing: 1px;
-	font-weight:bold;
+	/* font-weight:bold; */
 }
 
 .lexmarkcolor{
