--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,10 @@ padding-bottom: 55px;
 	font-family: 'Gelasio', serif;
 }
 
+.orangefont{
+	color:#E08932;
+}
+
 /* index about section */
 
 #about .btn {
