--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+.deckbutton {
+  background-color: #262626;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
 body {
   background-color: #fefefe;
 }
