--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -1,3 +1,54 @@
+.navi-link.foot {
+  margin-bottom: 0px;
+  margin-left: 30px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  background-color: transparent;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+}
+
+
+.footerlink {
+  display: inline-block;
+  padding-left: 0px;
+  font-family: Rubik, sans-serif;
+  color: #000;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  text-decoration: none;
+}
+.linkforfooter {
+  text-decoration: none;
+}
+.w-inline-block{
+  max-width:100%;
+  display:inline-block;
+}
+
+.navi-link {
+  margin-right: 0px;
+  margin-bottom: 15px;
+  margin-left: 0px;
+  padding: 0px;
+  -webkit-align-self: auto;
+  -ms-flex-item-align: auto;
+  -ms-grid-row-align: auto;
+  align-self: auto;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  font-family: Rubik, sans-serif;
+  color: #000;
+  font-weight: 400;
+  text-align: left;
+  letter-spacing: 0.5px;
+  text-decoration: none;
+}
+
 /* [2] Transition property for smooth transformation of images */
 .img-hover-zoom img {
   transition: transform .2s ease;
